# ascii-table-mcp

./: .gitignore  GUIDE.md  GUIDE_EN.md  GUIDE_TH.md  LICENSE  README.md  README_TH.md  _demo.py  _demo_compare.py  _demo_mcp.py  _table_emoji.html  _table_render_compact.html  _table_render_dark.html  _table_render_light.html  _table_render_minimal.html  _test.py  _test2.py  ascii-table-mcp.bat  generate_table.py  pyproject.toml  requirements.txt  server.py
.github/workflows/: deploy-pages.yml
ascii_table_mcp/: __init__.py  generate_table.py  thaiwidth.py
ascii_table_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: index.html
web/: index.html
