[project]
name = "ascii-table-mcp"
version = "0.1.0"
description = "MCP server for Unicode box-drawing, pipe, and ASCII grid tables with Thai/Pali width support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "wcwidth>=0.2.0",
]

[project.scripts]
ascii-table-mcp = "server:main"

[tool.uv]
dev-dependencies = []
