[project]
name = "ascii-table-mcp"
version = "0.1.0"
description = "MCP server for Unicode box-drawing and ASCII grid tables with Thai/Pali/CJK width support"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "wcwidth>=0.2.0",
    "Pillow>=10.0.0",
    "playwright>=1.40.0",
]

[project.scripts]
ascii-table-mcp = "ascii_table_mcp:main"

[tool.uv]
dev-dependencies = []

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
